Updated Log Reg

--- a/Jacob_Logistic_reg.ipynb
+++ b/Jacob_Logistic_reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "091cda96-66dc-402b-9610-e2cd30b89afc",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,8 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n"
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn import metrics\n"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bffca562-55bb-4354-9b4c-1c9b42fe98dc",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b56be22a-95bc-4550-b702-5ee2ea24463a",
    "metadata": {},
    "outputs": [],
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "465084ef-b34b-4e53-ad80-d1078d292635",
    "metadata": {},
    "outputs": [],
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "d589232f-4b29-4c42-97fa-408620007a03",
    "metadata": {},
    "outputs": [],
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "24ced41f-ae8f-4499-906c-a5f6d4cdb1e0",
    "metadata": {},
    "outputs": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "65712aff-b1b7-463c-a3b4-ff02cb380f00",
    "metadata": {},
    "outputs": [
@@ -144,11 +145,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "e7284c35-6af8-4523-b91d-dc47ec8cb0ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1.])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.classes_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2908adac-2777-4993-af96-5a015ad292b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.42115638])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "990bdd77-a037-4441-a671-81e8cc840d50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.35125583]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "866f4188-2b30-4400-b87d-83f22ba73047",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., ..., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict_proba(X)\n",
+    "model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b2bbe8b2-ee36-4e73-8b1a-056c562a3ec5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'confusion_matrix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#model score\u001b[39;00m\n\u001b[0;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39mscore(X, y)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mconfusion_matrix\u001b[49m(y, model\u001b[38;5;241m.\u001b[39mpredict(X))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'confusion_matrix' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#model score\n",
+    "model.score(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b1932352-befc-4d99-98ab-02ad83d5acba",
+   "id": "2da0d36b-7203-45b2-b814-5923b4733646",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Try to run a confusion matrix"
+   ]
   }
  ],
  "metadata": {
